--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ja">
-    <!配色：メイン 99ccff; アクセント　99cccc; ベース　ffffff; 
-    理由：男らしい青っぽい配色かつ、若さ・フレッシュさで少しポップな明るい色に>
+    <!-- 配色：メイン 99ccff; アクセント　99cccc; ベース　ffffff; 
+    理由：男らしい青っぽい配色かつ、若さ・フレッシュさで少しポップな明るい色に -->
     <head>
         <meta charset="utf-8">
         <title>Web Designer - Tomohiro Ishida</title>
